@@ -1,3 +1,8 @@
+2011-07-26  Kazuhiro Inaoka  <kazuhiro.inaoka.ud@renesas.com>
+
+	* gas/rx/r-bcc.d: Update expected disassembly of synthetic beq.a
+	instruction.
+
 2011-07-24  Maciej W. Rozycki  <macro@codesourcery.com>
             Chao-ying Fu  <fu@mips.com>
 	    Richard Sandiford  <rdsandiford@googlemail.com>
