@@ -1,3 +1,8 @@
+2011-07-26  Kazuhiro Inaoka  <kazuhiro.inaoka.ud@renesas.com>
+
+	* config/tc-rx.c (md_convert_frag): Fix encoding of beq.a
+	synthetic instruction.
+
 2011-07-25  Tristan Gingold  <gingold@adacore.com>
 
 	* frags.c (frag_grow): Simplify the code.
